--- a/configs/systemd/powertop.service
+++ b/configs/systemd/powertop.service
@@ -5,6 +5,7 @@ Description=Powertop tunings
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/usr/bin/powertop --auto-tune
+#ExecStart=/bin/bash -c "/usr/bin/echo on > /sys/bus/usb/devices/1-4.3/power/control"
 
 [Install]
 WantedBy=multi-user.target
