Update and move powertop

--- a/configs/sysctl/30-network.conf
+++ b/configs/sysctl/30-network.conf
@@ -1,5 +1,5 @@
 ###This is almost a  direct copy from https://wiki.archlinux.org/index.php/Sysctl#Improving_performance
-#Increasing the size of the receive queue.
+#Increasing the size of the receive queue
 net.core.netdev_max_backlog = 16384
 
 #Increase the memory dedicated to the network interfaces
@@ -50,6 +50,8 @@ net.ipv4.conf.all.rp_filter = 1
 #Prefer privacy addresses and use them over the normal addresses.
 net.ipv6.conf.all.use_tempaddr = 2
 net.ipv6.conf.default.use_tempaddr = 2
+
+
 
 ###MISC stuff that you may or may not want###
 #Log Martian Packets - uncomment to enable
