--- a/configs/systemd/powertop.service
+++ b/configs/systemd/powertop.service
@@ -5,6 +5,7 @@ Description=Powertop auto-tune tunings
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/usr/bin/powertop --auto-tune
+ExecStartPost=/bin/sh -c 'for f in $(grep -l "Mouse" /sys/bus/usb/devices/*/product | sed "s/product/power\\/control/"); do echo on >| "$f"; done'
 #ExecStart=/bin/bash -c "/usr/bin/echo on > /sys/bus/usb/devices/1-4.3/power/control"
 
 [Install]
