Remove firefox libs

--- a/configs/asd.conf
+++ b/configs/asd.conf
@@ -16,7 +16,7 @@
 #
 # Below is an example to whet your appetite.
 #WHATTOSYNC=('/srv/http' '/var/lib/monitorix' '/foo/bar')
-WHATTOSYNC=('/home/REPLACEME/.cache/mozilla/firefox' '/usr/lib/firefox')
+WHATTOSYNC=('/home/REPLACEME/.cache/mozilla/firefox')
 
 # Define where data will reside in tmpfs.
 # This location must be mounted to tmpfs and MUST be writable and executable.
