Switch to edk2-shell

--- a/configs/grub/custom.cfg
+++ b/configs/grub/custom.cfg
@@ -22,13 +22,9 @@ menuentry "System restart" {
 
 if [ "${grub_platform}" == "efi" ]; then
 submenu "UEFI Tools" {
-	menuentry "UEFI Shell V1" {
-		search --no-floppy --set=root --file /EFI/tools/shellx64_v1.efi
-		chainloader /EFI/tools/shellx64_v1.efi
-	}
-	menuentry "UEFI Shell V2" {
-		search --no-floppy --set=root --file /EFI/tools/shellx64_v2.efi
-		chainloader /EFI/tools/shellx64_v2.efi
+	menuentry "UEFI Shell" {
+		search --no-floppy --set=root --file /EFI/tools/shellx64.efi
+		chainloader /EFI/tools/shellx64.efi
 	}
 }
 fi
